--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -130,6 +130,16 @@
         "settings": {
           "color_scheme": "scheme-1"
         }
+      },
+      "contact-form": {
+        "type": "contact-form",
+        "settings": {
+          "heading": "Contact form",
+          "heading_size": "h1",
+          "color_scheme": "scheme-2",
+          "padding_top": 36,
+          "padding_bottom": 36
+        }
       }
     },
     "content_for_index": [
